tests/neg/i7575b.scala
import scala.language.*
class Foo() extends Dynamic // error: extension of type scala.Dynamic needs to be enabled
